# Sparkz-Backend

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: main.py
app/api/: __init__.py  router.py
app/api/routes/: analyses.py  health.py
app/checklists/: __init__.py  llm_keywords.py  llm_rule_checks.py  models.py  parser.py  retrieval_embedding.py
app/core/: __init__.py  checklist_type_keys.py  config.py  logging.py  requirement_order.py
app/db/: __init__.py  supabase.py  supabase_retry.py
app/evaluation/: __init__.py  check_evidence.py  embedding_vector.py  evidence_payload.py  fallback.py  lexical.py  llm_judge.py  requirements.py  retrieval.py  retrieval_rerank.py  verdict.py
app/pipeline/: __init__.py  chunking.py  embeddings.py  models.py  pdf_text.py  pii.py
app/schemas/: analysis.py  health.py  supabase.py
app/services/: analysis_runner.py  supabase_health.py
scripts/: extract_checklists.py  preview_extraction.py  preview_pii.py  sync_checklists_to_supabase.py
sql/migrations/: 001_checklist_schema.sql  002_analysis_pipeline_schema.sql  004_analysis_results_explanation.sql
tests/: test_check_evidence.py  test_checklist_parser.py  test_checklist_type_keys.py  test_chunking.py  test_embedding_parse.py  test_lexical.py  test_llm_rule_checks.py  test_pii.py  test_requirement_order.py  test_retrieval_embedding.py  test_retrieval_rerank.py  test_settings.py  test_sync_extraction_logic.py  test_sync_keywords.py  test_verdict.py
