[project]
name = "sparkz-backend"
version = "0.1.0"
description = "Sparkz backend service for checklist automation MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.9",
  "supabase>=2.8.0",
  "pypdf>=5.1.0",
  "numpy>=2.0.0",
  "pytesseract>=0.3.13",
  "pdf2image>=1.17.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["output*", "tests*", "scripts*"]

